# CV_Project_2026_S

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  frontend.md  pyproject.toml  requirements.txt  result.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
configs/: grounding_dino.yaml
docs/: final_report.md  installation.md  project_timeline.md  venv_packages.md
docs/plans/: 00_project_plan.md  01_reproduction_plan.md  02_coco_evaluation_plan.md  03_experiment_analysis_plan.md  04_report_submission_plan.md  05_documentation_requirements.md  06_single_gpu_finetune_plan.md  README.md
docs/stage_reports/: 01_reproduction_report.md  02_coco_evaluation_report.md  03_experiment_analysis_report.md
frontend/: app.js  frontend.md  index.html  server.py  styles.css
outputs/: env_info.txt
outputs/coco_eval/: coco_prompt.txt  config.yaml
outputs/coco_eval/full_val2017/: metrics.json  phrase_mapping.json
outputs/coco_eval/my_full_val2017/: metrics.json  phrase_mapping.json
outputs/experiments/: aaa_training_metrics.json
outputs/inference_demo/: 000000000139_predictions.json  000000000285_predictions.json  000000000632_predictions.json  000000000776_predictions.json  000000000872_predictions.json
ppt/: README.md  main.aux  main.fdb_latexmk  main.fls  main.nav  main.out  main.tex  main.toc  main.xdv  xelatex31268.fls
report/: report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex  report_cn.aux  report_cn.out  report_cn.tex  sample.bib
scripts/: download_coco.py  download_weights.py  eval.py  generate_report_highlights.py  generate_visualizations.py  inference.py  run_experiments.py  setup_env.ps1  setup_env.sh  train.py
src/: __init__.py
src/datasets/: __init__.py  coco_categories.py  coco_dataset.py
src/engine/: __init__.py  evaluator.py
src/inference/: __init__.py  coco_visualizer.py  predictor.py  visualizer.py
src/models/: __init__.py  grounding_dino.py
src/utils/: __init__.py  box_ops.py
tests/: test_box_ops.py  test_evaluator.py
work_dirs/gdino_baseline_eval/: grounding_dino_swin-t_finetune_16xb2_1x_coco.py
work_dirs/gdino_ft_reproduce/: grounding_dino_swin-t_finetune_16xb2_1x_coco.py
work_dirs/gdino_ft_short/: grounding_dino_swin-t_finetune_16xb2_1x_coco.py  last_checkpoint
work_dirs/gdino_smoke/: grounding_dino_swin-t_finetune_16xb2_1x_coco.py
(+53 files in other folders)
